Fix PlayStation build following 306535@main https://bugs.webkit.org/show_bug.cgi?id=306692

Unreviewed build fix.

* Source/WTF/wtf/generic/MemoryFootprintGeneric.cpp:
Remove extraneous closing brace.

Canonical link: https://commits.webkit.org/306557@main